# messaging_project

./: .gitignore  database.py  icons.py  main.py  network.py  pyproject.toml  uitopyconv.sh
authentication/: login.py  login_screen.py  setup.py  signup.py  signup_screen.py  start.py  start_screen.py  test_login.ui  test_signup.ui  test_start.ui
authentication_scripts/: __init__.py  login.py  resetpw.py  setup.py  signup.py  start.py
core_scripts/: __init__.py  database.py  network.py
icons/: icons.qrc  icons.sh
main_programme/: contact.py  main_programme.py  main_screen.py  test_contactdialogue.ui  test_mainwindow.ui
main_window_scripts/: __init__.py  contact.py  encryption.py  main_programme.py
ui_files/: __init__.py  uitopyconv.sh
ui_files/authentication/: __init__.py  login_screen.py  reset_pw_screen.py  signup_screen.py  start.ui  start_screen.py  test_login.ui  test_reset_pw.ui  test_signup.ui  test_start.ui
ui_files/main_window/: __init__.py  contact_dialogue.py  main_screen.py  test_contactdialogue.ui  test_mainwindow.ui
