[project]
name = "messaging-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=46.0.3",
    "getmac>=0.9.5",
    "pyside6>=6.10.0",
]

[project.scripts]
messaging-project = "main:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = [
    "core_scripts*",
    "authentication_scripts*",
    "main_window_scripts*",
    "ui_files*",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
